# winglib

./: LICENSE  Makefile  build.mk  buildpath.mk  config.mk  go.mk  make.def  make_directory.bat  mwl  mwld  setup.mk  stdinc.mk  todo.txt  unsupported.mk
app/alink/: AndroidManifest.xml  CALink.java  Makefile  main.c  main.cpp
app/atest/: Makefile
app/avi_scan/: Makefile  frame_wnd.cpp  frame_wnd.h  main_app.cpp  stdafx.cpp  stdafx.h
app/avi_scan/prj/cmake/: CMakeLists.txt
app/axtest/: Makefile  axtest.cpp  axtest.h  stdafx.cpp  stdafx.h  tcom.cpp  tcom.h
app/fftest/: Makefile  fftest.cpp
app/gstest/: Makefile  main.cpp
app/hello/: Makefile  main.cpp
app/hello_android/: AndroidManifest.xml  HelloWorld.java  Makefile  main.c
app/iptest/: Makefile  main.cpp
app/irr_android/: AndroidManifest.xml  IrrAndroid.java  Makefile  main.cpp
app/irr_test/: Makefile  frame_wnd.cpp  frame_wnd.h  main.cpp  stdafx.cpp  stdafx.h
app/irr_wxtest/: Makefile  frame_wnd.cpp  frame_wnd.h  main_app.h  stdafx.cpp  stdafx.h
app/modrun/: Makefile  main.cpp  stdafx.h
app/plock/: Makefile  plock.cpp
app/qt_webkit/: Makefile  main.cpp  mainwindow.cpp  network.cpp  network.h  stdafx.h
app/sq_modules/: static_build.hpp
app/sqengine/: Makefile  main.cpp  stdafx.h
app/sqplugin/: CMakeLists.txt  Factory.cpp  Makefile  PluginConfig.cmake  SqPlugin.cpp  SqPlugin.h  SqPluginAPI.cpp  SqPluginAPI.h
app/sqrl/: Makefile  main.cpp  stdafx.h
app/sqrl-cgi/: Makefile  main.cpp
app/squirrel/: Makefile  main.cpp  stdafx.cpp
app/srvmod/: Makefile  main.cpp
app/srvrund/: Makefile  main.cpp
app/test/: Makefile  StdAfx.cpp  stdafx.cpp  stdafx.h  test.cpp  test.dsp  test.dsw  test.sln  test.vcproj  test_arm.cpp
app/test/prj/cmake/: CMakeLists.txt  make.bat  make_win32_ming.bat  make_win32_vs6.bat
app/v4l/: frame_wnd.cpp  frame_wnd.h  stdafx.cpp  stdafx.h
app/vidcap/: Makefile  frame_wnd.cpp  frame_wnd.h  main_app.cpp  main_app.h  stdafx.cpp  stdafx.h
app/webdroid/: AndroidManifest.xml  Makefile  WebDroid.java
app/wx_webkit/: Makefile  frame_wnd.cpp  frame_wnd.h  main_app.cpp
dep/: Makefile  lib_abel.mk  lib_bullet.mk  lib_bzip2.mk  lib_cell.mk  lib_curl.mk  lib_cv.mk  lib_cvaux.mk  lib_cxcore.mk  lib_cximage.mk  lib_ffmpeg.mk  lib_fftw.mk  lib_fftw_rdft.mk  lib_freetype.mk  lib_freetype2.mk  lib_ftgl.mk  lib_gdchart.mk  lib_glib.mk  lib_gnutls.mk  lib_gsasl.mk  lib_gst-a-gstreamer.mk  lib_gst-b-gst-plugins-base.mk  lib_gst-c-gst-plugins-good.i  lib_gst-c-gst-plugins-good.mk  lib_gst-plugins-base.mk  lib_gst-plugins-good.i  lib_gst-plugins-good.mk  lib_gst-plugins.mk  lib_gstreamer.mk  lib_irrbullet.mk  lib_irrlicht-es.mk  lib_irrlicht.mk  lib_j2k.mk  lib_jpeg.mk  lib_libsoup.mk  lib_libxml.mk  lib_live555.mk  lib_mimetic.mk  lib_ntp.mk  lib_ogles.mk  (+13 more)
dep/gui/: Makefile  lib_irrlicht.mk  lib_scintilla.mk  lib_wxWidgets.mk
dep/gui_es/: lib_irrlicht-es.mk
dep/old/: lib_R.mk  lib_cint.mk  lib_root.mk
dox/: Makefile  doxygen.cfg  doxygen.inf  oexlib.dox  sqbind.dox  sqmod.dox
etc/: AxTest.inf  build-mingw32.sh  build-toolchain.sh  dependencies.txt  get-dependencies.bat  get-dependencies.sh  get-file.bat  link-tools.sh  makecab.mk  makefilecab  put-dependencies.sh
etc/media/: nurse_shark.avi
etc/patches/: SqPlus-2.1.0.patch  binutils-2.16-archive.c.patch  binutils-2.17-ar.c.patch  binutils-2.17-arm-dis.c.patch  binutils-2.17-bucomm.c.patch  binutils-2.17-cxxfilt.c.patch  binutils-2.17-readelf.c.patch  binutils-2.18-elf32-arm.c.patch  binutils-2.19-tc-arm.c.patch  gcc-3.4.3-flow.c.patch  gcc-3.4.3-t-linux.patch  gcc-3.4.4-collect2.c.patch  glibc-2.3.5-Makefile.patch  glibc-2.3.5-ioperm.c.patch  linux-cfg-custom_davinci_all_defconfig  linux-cfg-custom_eabi_defconfig
etc/php/: git_revision.php  svn_revision.php
etc/scripts/: auto_logout.nut  capture_rtspstream.nut  extract_jpegs.nut  extract_jpegs2.nut  fake_videos.nut  ffmpeg_extract_keyframes.nut  ffmpeg_portaudio.nut  ffmpeg_seek_test.nut  irr_bouncing_ball.nut  irr_editor.nut  irr_ffmpeg.nut  irr_gui.nut  irr_live555.nut  irr_live555_ffmpeg.nut  irr_selector.nut  live555_capture.nut  live555_server.nut  modbus_client.nut  modbus_server.nut  modbus_server_sim.nut  reg_squirrel.nut  reg_winglib.nut  send_file.nut  test.nut  test_asio.nut  test_avi.nut  test_capture.nut  test_cell.nut  test_cpu.nut  test_crtmp_server.nut  test_curl.nut  test_enum.nut  test_exec.nut  test_ffmpeg.nut  test_ffmpeg_avwrite.nut  test_fftw.nut  test_folders.nut  test_freenect.nut  test_freetype2.nut  test_gdchart.nut  (+50 more)
install/axtest/: Makefile  Makefile.mk  axtest.inf
install/sntpsync/: License.txt  Makefile  sntpsync.nsi
lib/oexlib/: Makefile  oexlib.h
lib/oexlib/prj/cmake/: CMakeLists.txt  make_win32_nmake.bat  make_win32_vs9.bat
lib/oexlib/prj/win32_vs6/: ALL_BUILD.dsp  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  oexlib.dsp  oexlib.dsw
lib/sqbind/: Makefile  import.h  module_instance.cpp  module_instance.h  module_manager.cpp  module_manager.h  msg_queue.cpp  msg_queue.h  script_thread.cpp  script_thread.h  sq_allocator.h  sq_defines.h  sq_engine.cpp  sq_engine.h  sq_engine.hpp  sq_file.h  sq_image.h  sq_list.cpp  sq_list.h  sq_map.cpp  sq_map.h  sq_multi.cpp  sq_multi.h  sq_time.h  sq_tools.h  sq_vector.cpp  sq_vector.h  sqbind.cpp  sqbind.h  sqbind_static_build.hpp  sqeng_extern.hpp  sqmod_extern.hpp  stdafx.h
oexlib/: oexlib.dsw  oexlib.h
oexlib/src/: circ_buf.cpp  circ_buf.h  data_packet.cpp  data_packet.h  file_mapping.h  memory.h  oexlib.dsp  oexlib.h  oexlib_config.h  oexlib_debugging.h  oexlib_exceptions.h  oexlib_macros.h  oexlib_namespace.h  oexlib_os_win32.h  oexlib_typedefs.h  oexlib_types.h  oexlib_warnings.h  rfun.h  stdafx.cpp  stdafx.h  thread_safe.h
prj/build_all/: build_all.sln  build_all.vcproj
qtwk/gtw/: Makefile
sq/auto-build/: Makefile  build.nut  build_mgr.nut  config.nut  main.nut  pg_build.nut  pg_cron.nut  pg_home.nut  web_server.nut  web_session.nut
sq/sntpsync/: Makefile
sq/task-list/: Makefile
sq/tmp/: Makefile
stlib/: config.h  stacktrace_impl.cpp  stlib.h  stlib_impl.cpp
(+742 files in other folders)
